hphp/hack/test/typecheck/constraints/superas.php.like_types.exp
File "superas.php", line 23, characters 15-19:
You are trying to access the member Equal but this is not an object, it is a dynamic value or an object of type IMem (Typing[4062])
File "superas.php", line 9, characters 19-22:
Definition is here
